限制MetaspaceSize, 使运行时常量池OOM